--- a/src/app/components/tree-node/tree-node.component.scss
+++ b/src/app/components/tree-node/tree-node.component.scss
@@ -50,6 +50,10 @@
       align-items: center;
       justify-content: center;
       flex-shrink: 0;
+
+      .icon {
+        max-width: 26px;
+      }
     }
 
     .node-icon.electronics {
